allow per-rule disable
Signed-off-by: Artyom Babiy <artyom.babiy@gmail.com>

--- a/charts/prometheus-smartctl-exporter/templates/prometheusrule.yaml
+++ b/charts/prometheus-smartctl-exporter/templates/prometheusrule.yaml
@@ -16,6 +16,8 @@ spec:
     - name: {{ template "prometheus-smartctl-exporter.name" $ }}
       rules:
       {{- range .Values.prometheusRules.rules }}
-        - {{ toYaml . | nindent 10 | trim }}
+        {{- if .enabled }}
+        - {{ toYaml (unset (deepCopy .) "enabled" ) | nindent 10 | trim }}
+        {{- end }}
       {{- end }}
 {{- end }}
