--- a/charts/prometheus-smartctl-exporter/values.yaml
+++ b/charts/prometheus-smartctl-exporter/values.yaml
@@ -40,6 +40,7 @@ prometheusRules:
   # release: prometheus-operator
   rules:
     smartCTLDeviceMediaErrors:
+      enabled: true
       alert: SmartCTLDeviceMediaErrors
       expr: smartctl_device_media_errors != 0
       for: 1m
@@ -50,6 +51,7 @@ prometheusRules:
       labels:
         severity: critical
     smartCTLDeviceCriticalWarning:
+      enabled: true
       alert: SmartCTLDeviceCriticalWarning
       expr: smartctl_device_critical_warning != 0
       for: 1m
@@ -60,6 +62,7 @@ prometheusRules:
       labels:
         severity: critical
     smartCTLDeviceAvailableSpareUnderThreshold:
+      enabled: true
       alert: SmartCTLDeviceAvailableSpareUnderThreshold
       expr: smartctl_device_available_spare_threshold > smartctl_device_available_spare
       for: 1m
@@ -70,6 +73,7 @@ prometheusRules:
       labels:
         severity: warning
     smartCTLDeviceStatus:
+      enabled: true
       alert: SmartCTLDeviceStatus
       expr: smartctl_device_status != 1
       for: 1m
@@ -80,6 +84,7 @@ prometheusRules:
       labels:
         severity: critical
     smartCTLDInterfaceSlow:
+      enabled: true
       alert: SmartCTLDInterfaceSlow
       expr: smartctl_device_interface_speed{speed_type="current"} != on(device, instance, namespace, pod) smartctl_device_interface_speed{speed_type="max"}
       for: 1m
@@ -90,6 +95,7 @@ prometheusRules:
       labels:
         severity: warning
     smartCTLDDeviceTemperature:
+      enabled: true
       alert: SmartCTLDDeviceTemperature
       expr: smartctl_device_temperature{temperature_type="current"} > 60
       for: 1m
