--- a/charts/prometheus-smartctl-exporter/values.yaml
+++ b/charts/prometheus-smartctl-exporter/values.yaml
@@ -46,8 +46,7 @@ prometheusRules:
       for: 1m
       annotations:
         summary: Device has media errors
-        description: |
-          Device {{ "{{ $labels.device }}" }} on instance {{ "{{ $labels.instance }}" }} has media errors
+        description: Device {{ $labels.device }} on instance {{ $labels.instance }} has media errors
       labels:
         severity: critical
     smartCTLDeviceCriticalWarning:
@@ -57,8 +56,7 @@ prometheusRules:
       for: 1m
       annotations:
         summary: Device has critical controller warnings
-        description: |
-          Device {{ "{{ $labels.device }}" }} on instance {{ "{{ $labels.instance }}" }} has critical controller warnings
+        description: Device {{ $labels.device }} on instance {{ $labels.instance }} has critical controller warnings
       labels:
         severity: critical
     smartCTLDeviceAvailableSpareUnderThreshold:
@@ -68,8 +66,7 @@ prometheusRules:
       for: 1m
       annotations:
         summary: Device is under available spare threshold
-        description: |
-          Device {{ "{{ $labels.device }}" }} on instance {{ "{{ $labels.instance }}" }} is under available spare threshold
+        description: Device {{ $labels.device }} on instance {{ $labels.instance }} is under available spare threshold
       labels:
         severity: warning
     smartCTLDeviceStatus:
@@ -79,8 +76,7 @@ prometheusRules:
       for: 1m
       annotations:
         summary: Device has bad status
-        description: |
-          Device {{ "{{ $labels.device }}" }} on instance {{ "{{ $labels.instance }}" }} has bad status
+        description: Device {{ $labels.device }} on instance {{ $labels.instance }} has bad status
       labels:
         severity: critical
     smartCTLDInterfaceSlow:
@@ -90,8 +86,7 @@ prometheusRules:
       for: 1m
       annotations:
         summary: Device interface is slower then it should be
-        description: |
-          Device {{ "{{ $labels.device }}" }} on instance {{ "{{ $labels.instance }}" }} interface is slower then it should be
+        description: Device {{ $labels.device }} on instance {{ $labels.instance }} interface is slower then it should be
       labels:
         severity: warning
     smartCTLDDeviceTemperature:
@@ -101,8 +96,7 @@ prometheusRules:
       for: 1m
       annotations:
         summary: Device has temperature higher than 60°C
-        description: |
-          Device {{ "{{ $labels.device }}" }} on instance {{ "{{ $labels.instance }}" }} has temperature higher than 60°C
+        description: Device {{ $labels.device }} on instance {{ $labels.instance }} has temperature higher than 60°C
       labels:
         severity: warning
 
