[prometheus-smartctl-exporter] Extend PrometheusRule templating (#5342)
Signed-off-by: Artem Babii <arthem.babij@gmail.com>
Signed-off-by: Artyom Babiy <artyom.babiy@gmail.com>
Co-authored-by: Artem Babii <arthem.babij@gmail.com>
Co-authored-by: Artyom Babiy <artyom.babiy@gmail.com>
Co-authored-by: kfox1111 <Kevin.Fox@pnnl.gov>

--- a/charts/prometheus-smartctl-exporter/templates/prometheusrule.yaml
+++ b/charts/prometheus-smartctl-exporter/templates/prometheusrule.yaml
@@ -13,6 +13,26 @@ metadata:
 {{- end }}
 spec:
   groups:
-  - name: smartctl-exporter.rules
-{{ .Files.Get "rules/rules.txt" | indent 4 }}
+    - name: {{ template "prometheus-smartctl-exporter.name" $ }}
+      rules:
+      {{- range .Values.prometheusRules.rules }}
+        {{- if .enabled }}
+        - alert: {{ .alert | required "A rule requires a valid `alert` clause" }}
+          expr: {{ .expr | required "A rule requires a valid `expr` clause" }}
+          {{- with .for }}
+          for: {{ . }}
+          {{- end }}
+          {{- with .keep_firing_for }}
+          keep_firing_for: {{ . }}
+          {{- end }}
+          {{- with .annotations }}
+          annotations:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- with .labels }}
+          labels:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+        {{- end }}
+      {{- end }}
 {{- end }}
