--- a/charts/prometheus-pushgateway/templates/secret.yaml
+++ b/charts/prometheus-pushgateway/templates/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "prometheus-pushgateway.fullname" . }}
-  namespace: {{ template "prometheus-pushgateway.namespace" . }}
+  namespace: {{ include "prometheus-pushgateway.namespace" . }}
   labels:
     {{- include "prometheus-pushgateway.defaultLabels" . | nindent 4 }}
 data:
