[prometheus]: create configmap only when both configMapOverrideName and configFromSecret are empty
Signed-off-by: jiaychen <jiayu.chen@camptocamp.com>

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -353,11 +353,19 @@ server:
     #   secretName: prom-secret-files
     #   readOnly: true
 
+  ## Prometheus server configuration from a secret
+  ## Do not set both `configMapOverrideName` and `configFromSecret` simultaneously.
+  ## Use either `configMapOverrideName` or `configFromSecret`.
+  ## If `configFromSecret` is defined, the `templates/server-configmap.yaml`
+  ## will NOT generate a ConfigMap resource.
+  configFromSecret: ""
+
   ## ConfigMap override where fullname is {{.Release.Name}}-{{.Values.server.configMapOverrideName}}
   ## Defining configMapOverrideName will cause templates/server-configmap.yaml
   ## to NOT generate a ConfigMap resource
   ##
   configMapOverrideName: ""
+
 
   ## Extra labels for Prometheus server ConfigMap (ConfigMap that holds serverFiles)
   extraConfigmapLabels: {}
