--- a/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/job-patch/job-createSecret.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/job-patch/job-createSecret.yaml
@@ -35,7 +35,7 @@ spec:
       {{- end }}
       containers:
         - name: create
-          {{- $registry := .Values.global.imageRegistry | default .Values.prometheusOperator.admissionWebhooks.patch.image.registry -}}
+          {{- $registry := coalesce .Values.prometheusOperator.admissionWebhooks.patch.image.registry .Values.global.imageRegistry -}}
           {{- if .Values.prometheusOperator.admissionWebhooks.patch.image.sha }}
           image: {{ $registry }}/{{ .Values.prometheusOperator.admissionWebhooks.patch.image.repository }}:{{ .Values.prometheusOperator.admissionWebhooks.patch.image.tag }}@sha256:{{ .Values.prometheusOperator.admissionWebhooks.patch.image.sha }}
           {{- else }}
