--- a/charts/alertmanager/templates/statefulset.yaml
+++ b/charts/alertmanager/templates/statefulset.yaml
@@ -177,7 +177,7 @@ spec:
             - --web.external-url={{ .Values.baseURL }}
             {{- end }}
           ports:
-            - name: http
+            - name: {{ .Values.containerPortName }}
               containerPort: 9093
               protocol: TCP
             {{- if or (gt (int .Values.replicaCount) 1) (.Values.additionalPeers) }}
