--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -93,15 +93,17 @@ extraInitContainers: []
 ##
 extraContainers: []
 
+containerPortName: &containerPortName http
+
 livenessProbe:
   httpGet:
     path: /
-    port: http
+    port: *containerPortName
 
 readinessProbe:
   httpGet:
     path: /
-    port: http
+    port: *containerPortName
 
 service:
   annotations: {}
