allow podmonitor and priorityclass configuration
Signed-off-by: Brien Dieterle <briend@terascope.io>

--- a/charts/prometheus-smartctl-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-smartctl-exporter/templates/daemonset.yaml
@@ -40,6 +40,9 @@ spec:
         - name: {{ $secret }}
         {{- end }}
       {{- end }}
+      {{- if $global.Values.priorityClassName }}
+      priorityClassName: {{ $global.Values.priorityClassName }}
+      {{- end }}
       containers:
       - image: "{{ $global.Values.image.repository }}:{{ $global.Values.image.tag | default $global.Chart.AppVersion }}"
         imagePullPolicy: {{ $global.Values.image.pullPolicy }}
