--- a/charts/prometheus-operator-admission-webhook/values.yaml
+++ b/charts/prometheus-operator-admission-webhook/values.yaml
@@ -171,7 +171,7 @@ podDisruptionBudget: {}
   # maxUnavailable: 0
 
 ## affinity
-affinity: {}
+affinity: null
 # affinity: |
 #   podAntiAffinity:
 #     requiredDuringSchedulingIgnoredDuringExecution:
