--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -153,8 +153,10 @@ service:
     ipFamilies: ["IPv6", "IPv4"]
     ipFamilyPolicy: "PreferDualStack"
 
-  ## External traffic policy setting (Cluster, Local)
+  ## External/Internal traffic policy setting (Cluster, Local)
+  ## https://kubernetes.io/docs/reference/networking/virtual-ips/#traffic-policies
   externalTrafficPolicy: ""
+  internalTrafficPolicy: ""
 
 # Set a NetworkPolicy with:
 # ingress only on service.port or custom policy
