[kube-prometheus-stack]: add GrafanaDashboard annotations
Signed-off-by: DrummyFloyd <jonathan.monnet28@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1239,6 +1239,10 @@ grafana:
     ## Set to true to allow dashboards to be loaded from ConfigMap references
     dashboardsConfigMapRefEnabled: false
 
+    ## Annotations for GrafanaDashboard Cr
+    ##
+    ##
+    annotations: {}
     ## Labels that should be matched kind: Grafana instance
     ## Example: { app: grafana, category: dashboard }
     matchLabels: {}
