--- a/charts/prometheus-redis-exporter/values.yaml
+++ b/charts/prometheus-redis-exporter/values.yaml
@@ -41,7 +41,8 @@ service:
   port: 9121
   portName: redis-exporter
   annotations: {}
-  labels: {}
+  labels:
+    {}
     # prometheus.io/path: /metrics
     # prometheus.io/port: "9121"
     # prometheus.io/scrape: "true"
@@ -56,7 +57,8 @@ affinity: {}
 priorityClassName: ""
 
 ## Extra manifests to deploy as an array
-extraManifests: []
+extraManifests:
+  []
   # - apiVersion: v1
   #   kind: ConfigMap
   #   metadata:
@@ -166,7 +168,8 @@ prometheusRule:
   enabled: false
   additionalLabels: {}
   namespace: ""
-  rules: []
+  rules:
+    []
     ## These are just examples rules, please adapt them to your needs.
     ## Make sure to constraint the rules to the current service.
     #  - alert: RedisDown
@@ -228,6 +231,12 @@ auth:
     secret:
       name: ""
       key: ""
+
+networkPolicy:
+  # This is useful on clusters using Calico and/or native k8s network policies in a default-deny setup.
+  enabled: false
+  # -- A list of valid from selectors according to https://kubernetes.io/docs/concepts/services-networking/network-policies.
+  ingressFrom: []
 
 podSecurityContext: {}
 # Example podsecurity policy
