update: pvc storage class name for aws
Added a default value of storage classname for aws eks

Signed-off-by: Paul Jebulan de Paula <paul.depaula@gmail.com>

--- a/charts/prometheus/templates/pvc.yaml
+++ b/charts/prometheus/templates/pvc.yaml
@@ -35,6 +35,7 @@ spec:
 {{- if .Values.server.persistentVolume.volumeName }}
   volumeName: "{{ .Values.server.persistentVolume.volumeName }}"
 {{- end -}}
+  storageClassName: gp2
 {{- end -}}
 {{- end -}}
 {{- end -}}
