add externalTrafficPolicy options
Signed-off-by: dongjiang <dongjiang1989@126.com>

--- a/charts/prometheus-pingmesh-exporter/values.yaml
+++ b/charts/prometheus-pingmesh-exporter/values.yaml
@@ -262,6 +262,8 @@ service:
   ipFamilies:
   - IPv4
   ipFamilyPolicy: SingleStack
+  # External traffic policy setting `Local` or `Cluster`, when service.type is `LoadBalancer` or `NodePort`
+  externalTrafficPolicy: ""
 
 # Only changes container port. Application port can be changed with extraArgs (--web.listen-address=:9115)
 # https://github.com/prometheus/pingmesh_exporter/blob/998037b5b40c1de5fee348ffdea8820509d85171/main.go#L55
