--- a/charts/prometheus-pingmesh-exporter/templates/service.yaml
+++ b/charts/prometheus-pingmesh-exporter/templates/service.yaml
@@ -19,6 +19,9 @@ spec:
   ipFamilyPolicy: {{ .Values.service.ipFamilyPolicy }}
 {{- end }}
   type: {{ .Values.service.type }}
+  {{- if and .Values.service.externalTrafficPolicy (or (eq .Values.service.type "LoadBalancer") (eq .Values.service.type "NodePort"))}}
+  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy }}
+  {{- end }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
