--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -356,8 +356,7 @@ server:
   ## Prometheus server configuration from a secret
   ## Do not set both `configMapOverrideName` and `configFromSecret` simultaneously.
   ## Use either `configMapOverrideName` or `configFromSecret`.
-  ## If `configFromSecret` is defined, the `templates/server-configmap.yaml`
-  ## will NOT generate a ConfigMap resource.
+  ## If `configFromSecret` is defined, a ConfigMap resource will NOT be generated.
   configFromSecret: ""
 
   ## ConfigMap override where fullname is {{.Release.Name}}-{{.Values.server.configMapOverrideName}}
@@ -365,7 +364,6 @@ server:
   ## to NOT generate a ConfigMap resource
   ##
   configMapOverrideName: ""
-
 
   ## Extra labels for Prometheus server ConfigMap (ConfigMap that holds serverFiles)
   extraConfigmapLabels: {}
