--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -353,6 +353,12 @@ server:
     #   secretName: prom-secret-files
     #   readOnly: true
 
+  ## Prometheus server configuration from a secret
+  ## Do not set both `configMapOverrideName` and `configFromSecret` simultaneously.
+  ## Use either `configMapOverrideName` or `configFromSecret`.
+  ## If `configFromSecret` is defined, a ConfigMap resource will NOT be generated.
+  configFromSecret: ""
+
   ## ConfigMap override where fullname is {{.Release.Name}}-{{.Values.server.configMapOverrideName}}
   ## Defining configMapOverrideName will cause templates/server-configmap.yaml
   ## to NOT generate a ConfigMap resource
