enable Service by default to preserve upgrade behavior

--- a/charts/prometheus-smartctl-exporter/values.yaml
+++ b/charts/prometheus-smartctl-exporter/values.yaml
@@ -31,6 +31,8 @@ serviceMonitor:
   relabelings: []
   metricRelabelings: []
 
+
+
 # PodMonitor may be more appropriate than Service Monitor, especially if more than 1000 Pods
 # background info: https://github.com/prometheus-operator/prometheus-operator/pull/6672, https://github.com/prometheus-operator/prometheus-operator/issues/3119
 # You most likely do not want to use a PodMonitor AND serviceMonitor at the same time.
@@ -169,7 +171,10 @@ tolerations:
 
 affinity: {}
 
+# You probably don't need a Service (or ServiceMonitor), consider using a PodMonitor instead
+# Enabled here for backwards compatibility
 service:
+  enabled: true
   type: ClusterIP
   port: 80
   ipDualStack:
