Add global podTargetLabels to kube-prometheus-stack chart
Signed-off-by: Konstantin Rekunov <konstantin.rekunov@mvideo.ru>

--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -118,6 +118,10 @@ spec:
   scrapeClasses:
     {{- tpl (toYaml . | nindent 4) $ }}
 {{- end }}
+{{- with .Values.prometheus.prometheusSpec.podTargetLabels }}
+  podTargetLabels:
+    {{- tpl (toYaml . | nindent 4) $ }}
+{{- end }}
 {{- if .Values.prometheus.prometheusSpec.scrapeFailureLogFile }}
   scrapeFailureLogFile: {{ .Values.prometheus.prometheusSpec.scrapeFailureLogFile }}
 {{- end }}
