--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,7 @@
   "schedule": [
     "* 16 * * 5"
   ],
+  "suppressNotifications": ["prEditedNotification"],
   "dependencyDashboardApproval": false,
   "bumpVersion": "patch",
   "customManagers": [
