feat: add additionalLabels for alertmanager and prometheus
Signed-off-by: Timon Engelke <timon.engelke@inovex.de>

--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -11,6 +11,9 @@ metadata:
   namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
     app: {{ template "kube-prometheus-stack.name" . }}-prometheus
+{{- if .Values.prometheus.additionalLabels }}
+{{ toYaml .Values.prometheus.additionalLabels | indent 4 }}
+{{- end }}
 {{ include "kube-prometheus-stack.labels" . | indent 4 }}
 {{- if .Values.prometheus.annotations }}
   annotations:
