--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -399,6 +399,10 @@ alertmanager:
   ##
   annotations: {}
 
+  ## Additional labels for Alertmanager
+  ##
+  additionalLabels: {}
+
   ## Api that prometheus will use to communicate with alertmanager. Possible values are v1, v2
   ##
   apiVersion: v2
@@ -2379,6 +2383,10 @@ kube-state-metrics:
     create: true
   releaseLabel: true
 
+  ## Additional labels for kube-state-metrics
+  ##
+  additionalLabels: {}
+
   ## Enable scraping via kubernetes-service-endpoints
   ## Disabled by default as we service monitor is enabled below
   ##
@@ -3339,6 +3347,10 @@ prometheus:
   ## Annotations for Prometheus
   ##
   annotations: {}
+
+  ## Additional labels for Prometheus
+  ##
+  additionalLabels: {}
 
   ## Configure network policy for the prometheus
   networkPolicy:
