--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -399,6 +399,10 @@ alertmanager:
   ##
   annotations: {}
 
+  ## Additional labels for Alertmanager
+  ##
+  additionalLabels: {}
+
   ## Api that prometheus will use to communicate with alertmanager. Possible values are v1, v2
   ##
   apiVersion: v2
@@ -3385,6 +3389,10 @@ prometheus:
   ## Annotations for Prometheus
   ##
   annotations: {}
+
+  ## Additional labels for Prometheus
+  ##
+  additionalLabels: {}
 
   ## Configure network policy for the prometheus
   networkPolicy:
