--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -9,6 +9,9 @@ metadata:
   namespace: {{ template "kube-state-metrics.namespace" . }}
   labels:
     {{- include "kube-state-metrics.labels" . | indent 4 }}
+  {{- if .Values.labels }}
+{{ toYaml .Values.labels | indent 4 }}
+  {{- end }}
   {{- if .Values.annotations }}
   annotations:
 {{ toYaml .Values.annotations | indent 4 }}
