feat(alertmanager): Ability to add probes for reloader sidercar
Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

--- a/charts/alertmanager/templates/statefulset.yaml
+++ b/charts/alertmanager/templates/statefulset.yaml
@@ -119,6 +119,10 @@ spec:
           ports:
             - containerPort: {{ . }}
           {{- end }}
+          livenessProbe:
+            {{- toYaml .Values.configmapReload.livenessProbe | nindent 12 }}
+          readinessProbe:
+            {{- toYaml .Values.configmapReload.readinessProbe | nindent 12 }}
           {{- with .Values.configmapReload.securityContext }}
           securityContext:
             {{- toYaml . | nindent 12 }}
