--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -334,6 +334,17 @@ configmapReload:
   ##
   resources: {}
 
+  livenessProbe: {}
+    # httpGet:
+    #   path: /healthz
+    #   port: 8080
+    #   scheme: HTTP
+  readinessProbe: {}
+    # httpGet:
+    #   path: /healthz
+    #   port: 8080
+    #   scheme: HTTP
+
   extraArgs: {}
 
   ## Optionally specify extra list of additional volumeMounts
