[alertmanager-snmp-notifier] bump snmp-notifier to v2.0.0
Signed-off-by: Maxime Wojtczak <maxime.wojtczak@yahoo.fr>

--- a/charts/alertmanager-snmp-notifier/ci/templates-values.yaml
+++ b/charts/alertmanager-snmp-notifier/ci/templates-values.yaml
@@ -2,7 +2,7 @@ snmpNotifier:
   snmpDestinations:
     - 127.0.0.1:162
 
-  snmpTemplates:
+  trapTemplates:
     description: |
       {{- if .Alerts -}}
       {{ len .Alerts }}/{{ len .DeclaredAlerts }} alerts are firing:
@@ -20,14 +20,14 @@ snmpNotifier:
       Status: OK
       {{- end -}}
 
-    extraFields:
-      - subId: 4
+    userObjects:
+      - subOid: 4
         template: |
           {{- if .Alerts -}}
           Status: NOK
           {{- else -}}
           Status: OK
           {{- end -}}
-      - subId: 5
+      - subOid: 5
         template: |
           This is a constant
