--- a/charts/alertmanager-snmp-notifier/templates/configmap.yaml
+++ b/charts/alertmanager-snmp-notifier/templates/configmap.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.snmpNotifier.snmpTemplates }}
+{{- if .Values.snmpNotifier.trapTemplates }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -6,13 +6,13 @@ metadata:
   labels:
     {{- include "alertmanager-snmp-notifier.labels" . | nindent 4 }}
 data:
-{{- if .Values.snmpNotifier.snmpTemplates.description }}
+{{- if .Values.snmpNotifier.trapTemplates.description }}
   description-template.tpl: |
-{{ .Values.snmpNotifier.snmpTemplates.description | indent 4 }}
+{{ .Values.snmpNotifier.trapTemplates.description | indent 4 }}
 {{- end }}
-{{- if .Values.snmpNotifier.snmpTemplates.extraFields }}
-  {{- range $element := .Values.snmpNotifier.snmpTemplates.extraFields }}
-  extra-field-{{ $element.subId }}-template.tpl: |
+{{- if .Values.snmpNotifier.trapTemplates.userObjects }}
+  {{- range $element := .Values.snmpNotifier.trapTemplates.userObjects }}
+  user-object-{{ $element.subOid }}-template.tpl: |
 {{ $element.template | indent 4 }}
 {{- end }}
 {{- end }}
