--- a/charts/alertmanager-snmp-notifier/values.yaml
+++ b/charts/alertmanager-snmp-notifier/values.yaml
@@ -37,8 +37,8 @@ snmpNotifier:
   #   name: existingsecret
   #   key: privatePassword
 
-  # snmpTemplates allows to customize the description of the traps, and add extra trap fields
-  snmpTemplates: {}
+  # trapTemplates allows to customize the description of the traps, and add extra trap fields
+  trapTemplates: {}
   #   description: |
   #     {{- if .Alerts -}}
   #     {{ len .Alerts }}/{{ len .DeclaredAlerts }} alerts are firing:
@@ -56,15 +56,15 @@ snmpNotifier:
   #     Status: OK
   #     {{- end -}}
 
-  #   extraFields:
-  #     - subId: 4
+  #   userObjects:
+  #     - subOid: 4
   #       template: |
   #         {{- if .Alerts -}}
   #         Status: NOK
   #         {{- else -}}
   #         Status: OK
   #         {{- end -}}
-  #     - subId: 5
+  #     - subOid: 5
   #       template: |
   #         This is a constant
 
