--- a/charts/alertmanager-snmp-notifier/Chart.yaml
+++ b/charts/alertmanager-snmp-notifier/Chart.yaml
@@ -5,10 +5,13 @@ home: https://github.com/maxwo/snmp_notifier
 sources:
   - https://github.com/maxwo/snmp_notifier
 type: application
-version: 0.5.0
+version: 1.0.0
 # renovate: github-releases=maxwo/snmp_notifier
-appVersion: v1.6.2
+appVersion: v2.0.0
+kubeVersion: ">=1.23.0-0"
 keywords:
+  - prometheus
+  - snmp
   - monitoring
 maintainers:
   - name: maxwo
