[kube-prometheus-stack] Use named port from coredns for metrics
Signed-off-by: Pat Riehecky <riehecky@fnal.gov>

--- a/charts/kube-prometheus-stack/templates/exporters/core-dns/servicemonitor.yaml
+++ b/charts/kube-prometheus-stack/templates/exporters/core-dns/servicemonitor.yaml
@@ -33,7 +33,7 @@ spec:
     matchNames:
       - "kube-system"
   endpoints:
-  - port: {{ .Values.coreDns.serviceMonitor.port }}
+  - port: {{ .Values.coreDns.serviceMonitor.targetPort }}
     {{- if .Values.coreDns.serviceMonitor.interval}}
     interval: {{ .Values.coreDns.serviceMonitor.interval }}
     {{- end }}
