--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1886,7 +1886,7 @@ coreDns:
   service:
     enabled: true
     port: 9153
-    targetPort: 9153
+    targetPort: metrics
 
     ipDualStack:
       enabled: false
