Use include rather than template
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus/templates/httproute.yaml
+++ b/charts/prometheus/templates/httproute.yaml
@@ -32,7 +32,7 @@ spec:
             statusCode: 301
     {{- else }}
     - backendRefs:
-        - name: {{ template "prometheus.server.fullname" $ }}
+        - name: {{ include "prometheus.server.fullname" $ }}
           port: {{ $.Values.server.service.servicePort }}
       {{- with $route.filters }}
       filters: {{ toYaml . | nindent 8 }}
