[kube-prometheus-stack] fix broken pdb due to missing line break
fixes #5649

Signed-off-by: Alik Khilazhev <7482065+alikhil@users.noreply.github.com>

--- a/charts/kube-prometheus-stack/templates/prometheus-operator/pdb.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/pdb.yaml
@@ -11,5 +11,5 @@ spec:
     matchLabels:
       app: {{ template "kube-prometheus-stack.name" . }}-operator
       release: {{ $.Release.Name | quote }}
-{{- toYaml (omit .Values.prometheusOperator.podDisruptionBudget "enabled") | indent 2 }}
+{{- toYaml (omit .Values.prometheusOperator.podDisruptionBudget "enabled") | nindent 2 }}
 {{- end }}
