--- a/charts/prometheus-nats-exporter/Chart.yaml
+++ b/charts/prometheus-nats-exporter/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
+# renovate: github-releases=nginx/nginx-prometheus-exporter
 appVersion: 0.16.0
 description: A Helm chart for prometheus-nats-exporter
 name: prometheus-nats-exporter
