add renovate config
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus-snmp-exporter/Chart.yaml
+++ b/charts/prometheus-snmp-exporter/Chart.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 description: Prometheus SNMP Exporter
 name: prometheus-snmp-exporter
-version: 9.3.0
+version: 9.3.1
+# renovate: github=prometheus/snmp_exporter
 appVersion: v0.28.0
 home: https://github.com/prometheus/snmp_exporter
 sources:
