--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -358,7 +358,7 @@ configmapReload:
     # - name: FOO
     #   value: BAR
 
-  # -- Add extra specs dynamically to this chart
+  # -- Add Extra Specs dynamically to this chart
   extraObjects: []
     # - |
     #   apiVersion: v1
