chore: replace non utf-8 characters

--- a/charts/prom-label-proxy/values.yaml
+++ b/charts/prom-label-proxy/values.yaml
@@ -176,7 +176,7 @@ metrics:
     # Additional settings for ServiceMonitor.
     additionalConfigs: {}
 
-    # HonorLabels chooses the metric’s labels on collisions with target labels.
+    # HonorLabels chooses the metric's labels on collisions with target labels.
     honorLabels: false
 
     # HonorTimestamps controls whether Prometheus respects the timestamps present in scraped data.
