Add support for custom labels in deployment template
Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

--- a/charts/prometheus-json-exporter/templates/deployment.yaml
+++ b/charts/prometheus-json-exporter/templates/deployment.yaml
@@ -4,6 +4,9 @@ metadata:
   name: {{ include "prometheus-json-exporter.fullname" . }}
   namespace: {{ include "prometheus-json-exporter.namespace" . }}
   labels:
+    {{- with .Values.deploymentLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
     {{- include "prometheus-json-exporter.labels" . | nindent 4 }}
   {{- with .Values.deploymentAnnotations }}
   annotations:
