--- a/charts/prometheus-json-exporter/values.yaml
+++ b/charts/prometheus-json-exporter/values.yaml
@@ -27,6 +27,10 @@ serviceAccount:
 # Annotations for the Deployment
 deploymentAnnotations: {}
 
+# Custom Labels for Deployment
+deploymentLabels:
+  example-label: example-value
+
 podAnnotations: {}
 
 podSecurityContext: {}
