Remove custtom example labels
Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

--- a/charts/prometheus-json-exporter/values.yaml
+++ b/charts/prometheus-json-exporter/values.yaml
@@ -28,8 +28,7 @@ serviceAccount:
 deploymentAnnotations: {}
 
 # Custom Labels for Deployment
-deploymentLabels:
-  example-label: example-value
+deploymentLabels: {}
 
 podAnnotations: {}
 
