[prometheus-node-exporter] Add extra rules for Node Exporter ClusterRole

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -375,6 +375,13 @@ rbac:
   ## https://kubernetes.io/docs/concepts/policy/pod-security-policy/
   pspEnabled: true
   pspAnnotations: {}
+  ##
+  ## Add permissions for CustomResources' apiGroups in Role/ClusterRole. Should be used in conjunction with Custom Resource Node Exporter configuration
+  ## Example:
+  ## - apiGroups: ["monitoring.coreos.com"]
+  ##   resources: ["prometheuses"]
+  ##   verbs: ["list", "watch"]
+  extraRules: []
 
 # for deployments that have node_exporter deployed outside of the cluster, list
 # their addresses here
