--- a/charts/prometheus-node-exporter/templates/clusterrole.yaml
+++ b/charts/prometheus-node-exporter/templates/clusterrole.yaml
@@ -1,12 +1,16 @@
-{{- if and (eq .Values.rbac.create true) (eq .Values.kubeRBACProxy.enabled true) -}}
+{{- if (eq .Values.rbac.create true) -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: {{ include "prometheus-node-exporter.fullname" . }}
   labels:
     {{- include "prometheus-node-exporter.labels" . | nindent 4 }}
+{{- if and ( not $.Values.kubeRBACProxy.enabled ) ( not $.Values.rbac.extraRules ) }}
+rules: null
+{{- end }}
+{{- if or ( $.Values.kubeRBACProxy.enabled ) ( $.Values.rbac.extraRules ) }}
 rules:
-  {{-  if $.Values.kubeRBACProxy.enabled  }}
+  {{- if $.Values.kubeRBACProxy.enabled }}
   - apiGroups: [ "authentication.k8s.io" ]
     resources:
       - tokenreviews
@@ -16,4 +20,8 @@ rules:
       - subjectaccessreviews
     verbs: [ "create" ]
   {{- end }}
+  {{- if $.Values.rbac.extraRules }}
+  {{- toYaml $.Values.rbac.extraRules | nindent 2 }}
+  {{- end }}
+{{- end -}}
 {{- end -}}
