--- a/charts/prometheus-node-exporter/templates/clusterrolebinding.yaml
+++ b/charts/prometheus-node-exporter/templates/clusterrolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if and (eq .Values.rbac.create true) (eq .Values.kubeRBACProxy.enabled true) -}}
+{{- if (eq .Values.rbac.create true) -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
