--- a/charts/prometheus-adapter/values.yaml
+++ b/charts/prometheus-adapter/values.yaml
@@ -292,6 +292,8 @@ podDisruptionBudget:
   enabled: false
   minAvailable:
   maxUnavailable: 1
+  # See https://kubernetes.io/docs/tasks/run-application/configure-pdb/#unhealthy-pod-eviction-policy for possible values
+  unhealthyPodEvictionPolicy:
 
 certManager:
   enabled: false
