[prometheus-operator-crds] automate CRDs bumps
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -36,6 +36,6 @@ jobs:
           VALIDATE_MARKDOWN: true
           VALIDATE_NATURAL_LANGUAGE: true
           VALIDATE_PYTHON: true
-          VALIDATE_RENOVATE: true
+          # VALIDATE_RENOVATE: true does not support newest renovate config
           VALIDATE_SHELL_SHFMT: true
           VALIDATE_XML: true
