--- a/renovate.json
+++ b/renovate.json
@@ -95,6 +95,7 @@
       "matchFileNames": [
         "charts/prometheus-operator-crds/**"
       ],
+      "schedule": null,
       "automerge": true,
       "platformAutomerge": true
     }
