--- a/renovate.json
+++ b/renovate.json
@@ -84,7 +84,7 @@
       "bumpVersions": [
         {
           "name": "Updating Chart version",
-          "filePatterns": ["{{packageFileDir}}/Chart.{yaml,yml}"],
+          "filePatterns": ["/^({{#each (distinct (lookupArray upgrades \"packageFileDir\"))}}{{{.}}}{{#unless @last}}|{{/unless}}{{/each}})/Chart\\.(yaml|yml)$/"],
           "matchStrings": ["(?:^|\\n)version:\\s\"?(?<version>\\d+\\.\\d+\\.\\d+)\"?(?:$|\\n)"],
           "bumpType": "{{#if isPatch}}patch{{else}}minor{{/if}}"
         }
