[prometheus-json-exporter] Add support for custom labels in deployment template (#5680)
Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>
Signed-off-by: MH <zanhsieh@gmail.com>
Co-authored-by: MH <zanhsieh@gmail.com>

--- a/charts/prometheus-json-exporter/values.yaml
+++ b/charts/prometheus-json-exporter/values.yaml
@@ -30,6 +30,9 @@ commonLabels: {}
 # Annotations for the Deployment
 deploymentAnnotations: {}
 
+# Custom Labels for Deployment
+deploymentLabels: {}
+
 podAnnotations: {}
 
 podSecurityContext: {}
