[CI] fix Setup Auto Approval
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -149,6 +149,6 @@ jobs:
 
       - name: Approve PR
         run:
-          gh pr review ${{ github.event.pull_request.number }} --approve --body "Lint and test passed, auto-approving."
+          gh pr review ${{ github.event.pull_request.number }} --approve --repo "${{ github.repository }}"
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
