Apply suggestions from code review
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Ilia Lazebnik <Ilia.lazebnik@gmail.com>

--- a/charts/prometheus/templates/ingress.yaml
+++ b/charts/prometheus/templates/ingress.yaml
@@ -20,7 +20,9 @@ metadata:
   name: {{ template "prometheus.server.fullname" . }}
   namespace: {{ include "prometheus.namespace" . }}
 spec:
+  {{- if .Values.server.ingress.ingressClassName }}
   ingressClassName: {{ .Values.server.ingress.ingressClassName }}
+  {{- end }}
   rules:
   {{- range .Values.server.ingress.hosts }}
     {{- $url := splitList "/" . }}
